# mitre-detector

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
data/processed/: columnas_modelo.json
data/raw/: part-00000-0955ed97-8460-41bd-872a-7375a7f0207e-c000.snappy.parquet
experiments/: detector_mitre_gnn.pt  detector_mitre_multiclase.pt  detector_mitre_no_earlystop.py  test_pytorch_binario.ipynb  test_pytorch_multiclase.ipynb  test_pytorch_stratify_ensemble_focalloss_multiclass.ipynb  test_pytorch_stratify_ensemble_focalloss_multiclass_2.ipynb  test_pytorch_stratify_ensemble_focalloss_multiclass_3.ipynb  test_pytorch_stratify_model_binario.ipynb
models/: bin_auth.pth  bin_gen.pth  bin_infra.pth  bin_sage.pth  bin_web.pth  multi_auth_gat.pth  multi_auth_sage.pth  multi_gen_gat.pth  multi_gen_sage.pth  multi_global_sage.pth  multi_infra_gat.pth  multi_infra_sage.pth  multi_web_sage.pth
models/config/: model_manifest.json  umbrales_optimos.json
models/encoders/: encoder_tactics.pkl  mapeo_ips.pkl  node_columns.pkl  node_features_historicas.pkl  scaler_edges.pkl  scaler_nodes.pkl  x_nodos_entrenamiento.pt
models/evaluation/: comparativa_gnn_vs_baselines.csv  resultados_baselines_tabulares.csv  tiempo_entrenamiento_total_gnn.json  tiempos_entrenamiento_gnn.csv
notebooks/: .env  01_Entrenamiento_GNN_Jerarquico_MITRE.ipynb  diagnose_load.ipynb  explore_service_column.ipynb  prueba_carga_neo4j.ipynb  pytorch_stratify_ensemble_focalloss_multiclass_earlystop.ipynb
src/: api.py  detector_mitre.py  insert_neo4j.py  simulador_api.py  simulador_kafka.py
