[tool.poetry]
name = "mitre-detector"
version = "1.0.0"
description = "Motor de Inferencia GNN para MITRE ATT&CK"
package-mode = false
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
pandas = "3.0.1"
numpy = "2.3.3"
scikit-learn = "1.8.0"
joblib = "1.5.3"
torch-geometric = "2.8.0"
pyarrow = "23.0.1"
pyyaml = "6.0.1"

[tool.poetry.group.dev.dependencies]
matplotlib = "*"
seaborn = "*"
tabulate = "*"
fastparquet = "*"
neo4j = "*"
python-dotenv = "*"
xgboost = "*"
# Solo se utiliza durante desarrollo

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# torch solo se utiliza cuando se haga build de la imagen docker, 
# ya que en desarrollo se cuenta con la versión de NVIDIA especificada en devcontainer.json

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.torch-gpu.dependencies]
torch = "2.11.0"

[tool.poetry.group.torch-cpu.dependencies]
torch = {version = "2.11.0", source = "pytorch-cpu"}